maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:78: error: not found: type Strin
def rechercheASuivre():Strin = {
                       ^JediEscaper:89: error: value - is not a member of String
    return "("+x-1+","+y+")"
                ^JediEscaper:91: error: value - is not a member of String
    return "("+x+","+y-1+")"
                      ^